Fixed projects not wrapping to another column when the row is filled.

--- a/css/projects.css
+++ b/css/projects.css
@@ -29,9 +29,11 @@ p {
     display: flex;
     flex-direction: row;
     align-content: center;
+    flex-wrap: wrap;
     margin-top: 20px;
     gap: 20px;
 }
+
 
 @media (max-width: 800px) {
     .container {
